--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.1.0"
+    "react-native-svg": "^13.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
