--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.1.0",
-    "victory-native": "^36.6.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
