--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-native": "0.70.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-image-picker": "^4.10.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
