--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.0",
@@ -25,6 +27,7 @@
     "react-native-screens": "^3.17.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.1.0",
+    "react-native-toast-message": "^2.1.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
